<resources>
    <string name="app_name">snowball_plan</string>
    <string name="logo_font_type">Snowballplan</string>
    <string name="build">新建</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="twentyOne">21</string>
    <string name="twentyTwo">22</string>
    <string name="twentyThree">23</string>
    <string name="twentyFour">24</string>
    <string name="twentyFive">25</string>
    <string name="twentySix">26</string>
    <string name="twentySeven">27</string>
    <string name="twentyEight">28</string>
    <string name="twentyNine">29</string>
    <string name="thirty">30</string>
    <string name="thirtyOne">31</string>

    <string name="mone">1号</string>
    <string name="mtwo">2号</string>
    <string name="mthree">3号</string>
    <string name="mfour">4号</string>
    <string name="mfive">5号</string>
    <string name="msix">6号</string>
    <string name="mseven">7号</string>
    <string name="meight">8号</string>
    <string name="mnine">9号</string>
    <string name="mten">10号</string>
    <string name="meleven">11号</string>
    <string name="mtwelve">12号</string>
    <string name="mthirteen">13号</string>
    <string name="mfourteen">14号</string>
    <string name="mfifteen">15号</string>
    <string name="msixteen">16号</string>
    <string name="mseventeen">17号</string>
    <string name="meighteen">18号</string>
    <string name="mnineteen">19号</string>
    <string name="mtwenty">20号</string>
    <string name="mtwentyOne">21号</string>
    <string name="mtwentyTwo">22号</string>
    <string name="mtwentyThree">23号</string>
    <string name="mtwentyFour">24号</string>
    <string name="mtwentyFive">25号</string>
    <string name="mtwentySix">26号</string>
    <string name="mtwentySeven">27号</string>
    <string name="mtwentyEight">28号</string>
    <string name="mtwentyNine">29号</string>
    <string name="mthirty">30号</string>
    <string name="mthirtyOne">31号</string>



    <string name="two_zero_two_zero">2020</string>
    <string name="two_zero_two_one">2021</string>
    <string name="two_zero_two_two">2022</string>
    <string name="two_zero_two_three">2023</string>
    <string name="two_zero_two_four">2024</string>
    <string name="two_zero_two_five">2025</string>
    <string name="two_zero_two_six">2026</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_vpfragment_year">VPFragmentYearActivity</string>
    <string name="first_fragment_label">first_fragment_label</string>
    <string name="second_fragment_label">second_fragment_label</string>

    <string name="new_plan">新建计划</string>
    <string name="plan_month">计划月份</string>
    <string name="plan_type">计划类别</string>
    <string name="plan_list">计划清单</string>
    <string name="color_title">颜色</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>

    <string name="ione">1月</string>
    <string name="itwo">2月</string>
    <string name="ithree">3月</string>
    <string name="ifour">4月</string>
    <string name="ifive">5月</string>
    <string name="isix">6月</string>
    <string name="iseven">7月</string>
    <string name="ieight">8月</string>
    <string name="inine">9月</string>
    <string name="iten">10月</string>
    <string name="ieleven">11月</string>
    <string name="itwelve">12月</string>

    <string name="plan_with_month">5月计划</string>
    <string name="database">数据库</string>
    <string name="tasks">听力
阅读
翻译
写作</string>
    <string name="direct_month">5月， 6月</string>
    <string name="now">当前：</string>
    <string name="jumpto">跳转</string>

    <string name="plan_time_start">开始时间</string>
    <string name="plan_time_end">结束时间</string>
    <string name="plan_repeat">计划重复日期</string>
    <string name="plan_conflict">冲突计划</string>
    <string name="plan_overtime">超时自动勾选</string>

    <string name="list">IT项目综合设计与实践
王振讲师
西区综合实验楼 - A305</string>

    <string name="plan_day">计划日期</string>

</resources>