<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".fragment.MonthCellFragment"
    android:columnCount="5"
    android:rowCount="5"
    android:id="@+id/gl_btn">

    <!-- TODO: Update blank fragment layout -->
    <android.widget.Button
        android:id="@+id/btn_one"
        android:text="@string/one"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>

    <android.widget.Button
        android:id="@+id/btn_two"
        android:text="@string/two"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_three"
        android:text="@string/three"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_four"
        android:text="@string/four"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_five"
        android:text="@string/five"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_six"
        android:text="@string/six"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_seven"
        android:text="@string/seven"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>

    <android.widget.Button
        android:id="@+id/btn_eight"
        android:text="@string/eight"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>

    <android.widget.Button
        android:id="@+id/btn_nine"
        android:text="@string/nine"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_ten"
        android:text="@string/ten"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_eleven"
        android:text="@string/eleven"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_twelve"
        android:text="@string/twelve"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_thirteen"
        android:text="@string/thirteen"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_fourteen"
        android:text="@string/fourteen"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_fifteen"
        android:text="@string/fifteen"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>

    <android.widget.Button
        android:id="@+id/btn_sixteen"
        android:text="@string/sixteen"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_seventeen"
        android:text="@string/seventeen"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_eighteen"
        android:text="@string/eighteen"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_nineteen"
        android:text="@string/nineteen"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_twenty"
        android:text="@string/twenty"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_twentyOne"
        android:text="@string/twentyOne"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_twentyTwo"
        android:text="@string/twentyTwo"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_twentyThree"
        android:text="@string/twentyThree"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_twentyFour"
        android:text="@string/twentyFour"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_twentyFive"
        android:text="@string/twentyFive"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_twentySix"
        android:text="@string/twentySix"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_twentySeven"
        android:text="@string/twentySeven"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_twentyEight"
        android:text="@string/twentyEight"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_twentyNine"
        android:text="@string/twentyNine"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
    <android.widget.Button
        android:id="@+id/btn_thirty"
        android:text="@string/thirty"
        android:layout_height="80dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"/>


</GridLayout>