<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".fragment.YearCellFragment"
    android:columnCount="3"
    android:rowCount="4">

        <android.widget.Button
            android:id="@+id/b1"
            android:text="@string/one"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <android.widget.Button
            android:id="@+id/b2"
            android:text="@string/two"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <android.widget.Button
            android:id="@+id/b3"
            android:text="@string/three"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <android.widget.Button
            android:id="@+id/b4"
            android:text="@string/four"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <android.widget.Button
            android:id="@+id/b5"
            android:text="@string/five"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <android.widget.Button
            android:id="@+id/b6"
            android:text="@string/six"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <android.widget.Button
            android:id="@+id/b7"
            android:text="@string/seven"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <android.widget.Button
            android:id="@+id/b8"
            android:text="@string/eight"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <android.widget.Button
            android:id="@+id/b9"
            android:text="@string/nine"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <android.widget.Button
            android:id="@+id/b10"
            android:text="@string/ten"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <android.widget.Button
            android:id="@+id/b11"
            android:text="@string/eleven"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <android.widget.Button
            android:id="@+id/b12"
            android:text="@string/twelve"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:textSize="25sp"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle" />

</GridLayout>